--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "primaryColor": "#f6f6f7"
   },
   "dependencies": {
-    "@exponent/react-native-responsive-image": "0.0.4",
+    "@exponent/react-native-responsive-image": "^0.1.0",
     "@exponent/with-custom-font": "^2.0.0",
-    "babel-preset-react-native": "^1.4.0",
-    "babel-relay-plugin": "^0.6.3",
     "immutable": "^3.7.6",
     "react": "^0.14.7",
     "react-mixin": "^3.0.3",
@@ -24,5 +22,15 @@
     "react-native-clone-referenced-element": "^1.0.0",
     "react-relay": "github:exponentjs/relay#exp-latest",
     "react-timer-mixin": "^0.13.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^4.1.8",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-export-extensions": "^6.5.0",
+    "babel-plugin-transform-react-constant-elements": "^6.5.0",
+    "babel-preset-react-native": "^1.4.0",
+    "babel-relay-plugin": "^0.7.0",
+    "eslint": "^2.1.0",
+    "eslint-plugin-react": "^3.16.1"
   }
 }
